added jwt security, login, listTransactions, better env variables management
