# api/server/src/index.ts
@@ -1,27 +1,31 @@
 import express from "express"
 import { join } from "path"
 import { middleware } from "express-openapi-validator"
-import * as dotenv from "dotenv";
+import { OpenAPIV3 } from "openapi-types";
+import verifyToken from "../../middlewares/verifyToken"
+import { apiPort } from "../../config"
 
-const BASE_PATH = join(__dirname, "../../../..")
-const ENV_FILE = (process.env.NODE_ENV === "production" ? ".env" : ".env.dev")
-dotenv.config({ path: join(BASE_PATH, ENV_FILE) });
-
-const PORT = process.env.API_PORT || 3000
 const apiSpec = join(__dirname, "../../openapi/openapi.yaml")
 const app = express()
 
 app.use(express.urlencoded({ extended: false }))
 app.use(express.text())
 app.use(express.json())
-app.use('/spec', express.static(apiSpec))
+app.use("/spec", express.static(apiSpec))
 
 app.use(
   middleware({
     apiSpec,
     validateRequests: true,
-    operationHandlers: join(__dirname)
+    validateResponses: true,
+    operationHandlers: join(__dirname),
+    validateSecurity: {
+      handlers: {
+        bearerAuth: (req: express.Request, scopes: string[], schema: OpenAPIV3.SecuritySchemeObject) : boolean => 
+          verifyToken(req)
+      }
+    }
   }),
 )
 
-app.listen(PORT, () => { console.log(`listening on port ${PORT}`) })
+app.listen(apiPort, () => { console.log(`listening on port ${apiPort}`) })
